samples/_failures_safe/1761509844_1402ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c0769e4.c: In function ‘main’:
./samples/SAFE/__tmp_3c0769e4.c:141:12: error: missing terminating " character
  141 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_3c0769e4.c:141:5: error: expected expression at end of input
  141 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_3c0769e4.c:141:5: error: expected declaration or statement at end of input
